edit language in header

--- a/da_bayesian-statistics.ipynb
+++ b/da_bayesian-statistics.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Thomas Bayes: The Badass of Probability 😎\n",
+    "# Thomas Bayes: The Superstar of Probability 😎\n",
     "\n",
     "- Bayesian inference calculates the probability of an outcome using prior knowledge or belief."
    ]
@@ -55,15 +55,6 @@
     "\"Never tell me the odds!\" https://www.countbayesie.com/blog/2015/2/18/hans-solo-and-bayesian-priors\n",
     "\n",
     "Han is a one great pilot, so he likely will get through the asteroid field even if others will fail (crash and blow-up)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sidebar: Interpreting Reviews \n",
-    "\n",
-    "Imagine two similar products, one with one 5 star review and another with 1,000 reviews averaging 4.6 stars. Which would you buy?"
    ]
   },
   {
